Enhance Geographical Boundaries (Complex, Fuzzy, Timed, Convex Hull) and complete stub GML Loader